<resources>
    <string name="app_name">Radical</string>
    <string name="category_image_url">https://radical-app.ir/api/images/categories/%s.png</string>
    <string name="main_image_url">https://radical-app.ir/api/images/shops/%s/main.JPG</string>
    <string name="shop_image_url">https://radical-app.ir/api/images/shops/%s/%s.JPG</string>
    <string name="slider_image_url">https://radical-app.ir/api/images/slider/%s.JPG</string>
    <string name="eng_digits">1234567890abcdefghijklmnopqrstuwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_@.-</string>
    <string name="search_hint">جستجو</string>
    <string name="txt_yes">بلی</string>
    <string name="txt_yeah">فهمیدم!</string>
    <string name="txt_no">خیر</string>
    <string name="txt_share">اشتراک از طریق</string>
    <string name="txt_share_nonew">کیف پول قبلا شارژ شده</string>
    <string name="txt_share_ok">تبریک! کیف پول شما شارژ شد</string>
    <string name="txt_start">شروع</string>
    <string name="txt_letsgo">بزن بریم</string>
    <string name="txt_qr">برای ادامه، لطفا بارکد داخل فروشگاه را اسکن کنید!</string>
    <string name="txt_sent">کد تایید با موفقیت ارسال شد!</string>
    <string name="txt_loading">...</string>
    <string name="txt_tryagain">تلاش مجدد</string>
    <string name="txt_back">بازگشت</string>
    <string name="txt_exit">برای خروج کلید بازگشت رو دوباره بفشارید!</string>
    <string name="txt_exit_profile">از حساب کاربری خود خارج می شوید. آیا مایلید؟</string>
    <string name="txt_wait">لطفا منتظر باشید...</string>
    <string name="txt_welcome">خوش آمدید!</string>
    <string name="txt_empty">فروشگاهی موجود نیست!</string>
    <string name="txt_empty3">خریدی انجام نداده اید!</string>
    <string name="txt_empty2">چیزی برای نمایش وجود ندارد!</string>
    <string name="txt_default_name">کاربر رادیکال</string>
    <string name="txt_profile_success">اطلاعات با موفقیت ذخیره شد!</string>
    <string name="txt_profile_success_noinvite">اطلاعات با موفقیت ذخیره شد، لطفا کد معرف را بررسی کنید!</string>
    <string name="txt_buy_success">اشتراک با موفقیت فعال شد!</string>
    <string name="plan_bronze">عادی</string>
    <string name="plan_bronze_exp">نامحدود</string>
    <string name="plan_diamond">VIP</string>
    <string name="plan_diamond_exp">%d روز</string>
    <string name="number_error">لطفا شماره تلفن را بررسی کنید!</string>
    <string name="invite_error">لطفا شماره تلفن معرف را بررسی کنید!</string>
    <string name="name_error">لطفا نام را بررسی کنید!</string>
    <string name="family_error">لطفا نام خانوادگی را بررسی کنید!</string>
    <string name="form_error">لطفا قبل از ذخیره فرم را کامل کنید!</string>
    <string name="birthday_error">لطفا تاریخ تولد را کامل کنید!</string>
    <string name="profile_error">قبل از برقراری ارتباط با پشتیبانی حساب کاربری خود را تکمیل کنید</string>
    <string name="email_error">لطفا ایمیل را بررسی کنید!</string>
    <string name="color_error">لطفا رنگ مورد علاقه خود را انتخاب کنید!</string>
    <string name="data_error">خطا در اطلاعات برنامه! لطفا دوباره وارد شوید</string>
    <string name="invitecide_error">شماره معرف نمی تواند شماره خودتان باشد!</string>
    <string name="access_error">حساب شما در جای دیگر آنلاین شده! لطفا دوباره وارد شوید</string>
    <string name="internet_error">لطفا اتصال به اینترنت را بررسی کنید!</string>
    <string name="general_error">خطا! لطفا دوباره امتحان کنید</string>
    <string name="giftcode_error">کد وارد شده معتبر نیست!</string>
    <string name="select_error">لطفا اشتراک مورد نظر را انتخاب کنید</string>
    <string name="qr_error">خطا! بارکد نامعتبر است</string>
    <string name="qr_error2">خطا! بارکد متعلق به این فروشگاه نیست</string>
    <string name="wrongcode_error">کد وارد شده صحیح نیست!</string>
    <string name="noreg_error">خطایی در شماره تلفن رخ داده!</string>
    <string name="fillbuy_error">خطا! لیست خرید خود را تکمیل کنید</string>
    <string name="permission_camera">دسترسی به دوربین</string>
    <string name="permission_camera_toast">دسترسی به دوربین را داخل تنظیمات فعال کنید</string>
    <string name="permission_camera_message">رادیکال برای خواندن QR کد اجازه دسترسی به دوربین را لازم دارد!</string>
    <string name="permission_allow">اجازه می دهم</string>
    <string name="permission_dismiss">اجازه نمی دهم</string>
    <string name="toolbar_discount">تخفیف شما: %s</string>
    <string name="navigation_mainpage">صفحه اصلی</string>
    <string name="navigation_profile">حساب کاربری</string>
    <string name="navigation_wallet">کیف پول</string>
    <string name="navigation_history">تاریخچه خرید</string>
    <string name="navigation_history_sub1">تاریخچه خرید اشتراک</string>
    <string name="navigation_history_sub2">تاریخچه خرید از فروشگاه</string>
    <string name="navigation_history_sub3">آمار و اطلاعات</string>
    <string name="navigation_catagory">دسته بندی ها</string>
    <string name="navigation_plan">وضعیت اشتراک</string>
    <string name="navigation_favorites">مکان های نشان شده</string>
    <string name="navigation_share">معرفی به دوستان</string>
    <string name="navigation_support">پیام ها/پشتیبانی</string>
    <string name="navigation_support_sub1">پیام های عمومی</string>
    <string name="navigation_support_sub2">ارتباط با پشتیبانی</string>
    <string name="navigation_coop">درخواست همکاری</string>
    <string name="navigation_help">راهنما</string>
    <string name="navigation_about">درباره رادیکال</string>
    <string name="navigation_exit">خروج از حساب</string>
    <string name="login_reg">ثبت نام</string>
    <string name="login_login">ورود</string>
    <string name="login_number">شماره تلفن خود را وارد کنید</string>
    <string name="login_text">ورود به رادیکال</string>
    <string name="login_text2">لطفا شماره تلفن خود را وارد کنید و منتظر دریافت کد از طریق پیامک باشید</string>
    <string name="reg_number">شماره تلفن</string>
    <string name="reg_invite">کد معرف (اختیاری)</string>
    <string name="reg_text">حساب کاربری جدید</string>
    <string name="reg_name">نام و نام خانوادگی</string>
    <string name="code_text">کد به شماره تلفن شما ارسال شد
لطفا کد را در کادر زیر وارد کنید</string>
    <string name="code_reg">تایید</string>
    <string name="code_code">کد تایید</string>
    <string name="code_resend">ارسال مجدد کد</string>
    <string name="about_title">درباره رادیکال</string>
    <string name="about_text">هدف رادیکال کاهش هزینه های خانوار و کسب و کارها بدون افت کیفیت زندگی می باشد. رادیکال حاصل تحقیق، جمع آوری و توسعه اطلاعات بر روی مسائل اقتصادی خانوارهای ایرانی به ویژه کرمانشاهی ، همچنین مدل های کسب و کار در کشور است که جای خالی آن ها به خوبی احساس می شود. موضوع مهمی که در خانوارها فراموش، در مدرسه غیرقابل آموزش و در دانشگاه ها به دست فراموشی سپرده شده است. 

این موضوع اصلی نقش پول در اقتصاد خانواده ، کسب و کار و نوع به کاربگیری پول می باشد. شرکت های تخفیفاتی، تبلیغاتی و ... به هر طریقی جامعه را سمت مصرف و خرید محصول سوق می دهند. تخفیف هایی با درصد بالا ، تبلیغاتی با رنگ و لعاب وسوسه کننده که مشتریان را به مصرف کالا هدایت می کند که شاید واقعاً به خرید آن در آن زمان نیازی نباشد. 

موضوع مهم نحوه ی برخورد با پول است که درگیر عادت غیرخوب مصرف گرایی شده ایم. همین موضوع باعث شد تا ما با تحفیف، جمع آوری و توسعه اطلاعات اقتصادی در یک تیم متخصص، رادیکال را ایجاد کنیم تا شما بتوانید با تخفیف های واقعی و نه وسوسه کننده به صورت روزانه برای خرید یا هر هزینه ای که ناگزیر به انجام آن هستید با فعال کردن طرح مناسب ، مخارج زندگی را کاهش دهید و اعجاز زندگی به سبک رادیکال را حس کنید. 

برای ما مهم است بتوانیم ابزار مناسب و آموزش لازم در زندگی مردم ایران سهم مثبت و مفیدی را به خود اختصاص دهیم، به همین دلیل تمام علم وتوان خود را برای بهبود روز به روز به کار بسته ایم ، شما نیز ما را دراین مهم یاری دهید.</string>
    <string name="about_email">ارسال ایمیل</string>
    <string name="about_issue">گزارش مشکل</string>
    <string name="about_call">تماس با پشتیبانی</string>
    <string name="about_trademark1">تمامی حقوق این محصول متعلق به \n شرکت تاجران نوین تسنیم میباشد</string>
    <string name="about_trademark2">توسعه دهنده و برنامه نویس سمت سرور: شهاب عظیمی</string>
    <string name="about_trademark3">طراح گرافیک و ui: امیر مرادی</string>
    <string name="about_trademark4">ورژن %s ، 1397</string>
    <string name="profile_phone">شماره تلفن</string>
    <string name="profile_name">نام</string>
    <string name="profile_family">نام خانوادگی</string>
    <string name="profile_email">ایمیل</string>
    <string name="profile_gender">جنسیت</string>
    <string name="profile_birthday">تاریخ تولد</string>
    <string name="profile_birthday_select">انتخاب کنید</string>
    <string name="profile_plan">وضعیت اشتراک</string>
    <string name="profile_job">شغل</string>
    <string name="profile_edu">تحصیلات</string>
    <string name="profile_region">محله زندگی</string>
    <string name="profile_color">رنگ مورد علاقه</string>
    <string name="profile_color_select">انتخاب رنگ</string>
    <string name="profile_color_select_title">رنگ مورد علاقه خود را انتخاب کنید</string>
    <string name="profile_time">زمان باقی مانده اشتراک</string>
    <string name="profile_giftcode">شماره معرف</string>
    <string name="profile_sex_male">آقا</string>
    <string name="profile_sex_female">خانم</string>
    <string name="profile_save">ذخیره</string>
    <string name="wallet_title">کیف پول</string>
    <string name="wallet_text">موجودی کیف پول شما:</string>
    <string name="wallet_buy">خرید اشتراک</string>
    <string name="wallet_info_title">راه های افزایش موجودی کیف پول</string>
    <string name="wallet_info2_title">موارد استفاده از کیف پول</string>
    <string name="wallet_info_text1">تکمیل کردن حساب کاربری</string>
    <string name="wallet_info_text1_sub">با تکمیل حساب کاربری خود برای اولین بار، بصورت رایگان کیف پول شما شارژ می شود</string>
    <string name="wallet_info_text2">معرفی رادیکال به دوستان خود</string>
    <string name="wallet_info_text2_sub">هریک از دوستان شما که شما را به عنوان معرف خود معرفی کنند کیف پول شما شارژ می شود</string>
    <string name="wallet_info_text3">خرید از فروشگاه ها</string>
    <string name="wallet_info_text3_sub">با اولین خرید از هر فروشگاه کیف پول شما شارژ می شود.</string>
    <string name="wallet_info_text4">عضویت در شبکه های اجتماعی</string>
    <string name="wallet_info2_text1">در حال حاضر می توانید از موجودی خود جهت اشتراک استفاده کنید</string>
    <string name="share_info_title">با معرفی دوستان خود به رادیکال بصورت رایگان کیف پول خود را شارژ کنید</string>
    <string name="share_get_title">دریافت جایزه!</string>
    <string name="share_info_text1">با معرفی هر نفر 1000 تومان کیف پول شما شارژ می شود</string>
    <string name="share_info_text2">سقف معرفی دوستان 7 نفر می باشد</string>
    <string name="share_info_text3">عجله کن!</string>
    <string name="share_title">با معرفی دوستان خوب به رادیکال بصورت رایگان کیف پول خود را شارژ کنید</string>
    <string name="giftcode_title">کد معرفی شما:</string>
    <string name="giftcode_star_title">فقط %d نفر مانده!</string>
    <string name="plan_title">اشتراک VIP</string>
    <string name="plan_text">با خرید اشتراک زمان دار از تمامی تخفیف های فروشگاه ها بصورت نامحدود استفاده کنید</string>
    <string name="plan_buy">خرید کنید</string>
    <string name="plan_upgrade">تمدید اشتراک</string>
    <string name="profile_dialog_title">ارتباط با پشتیبانی</string>
    <string name="profile_dialog_text">قبل از برقراری ارتباط با پشتیبانی، لازم است حساب کاربری خود را تکمیل کنید</string>
    <string name="profile_dialog_profile">تکمیل</string>
    <string name="intro_dialog_show">مشاهده راهنما</string>
    <string name="intro_dialog_cancel">بستن</string>
    <string name="intro_dialog_text">سلام، به رادیکال خوش آمدید. \nاگر قبلا از رادیکال استفاده نکردید لطفا در ابتدا راهنمای برنامه را مشاهده کنید!</string>
    <string name="newversion_dialog_show">دانلود</string>
    <string name="newversion_dialog_cancel">بستن</string>
    <string name="newversion_dialog_text">رادیکالی عزیز نسخه جدید رادیکال منتشر شده، لطفا با استفاده از گزینه های زیر برنامه خود را بروزرسانی کنید.</string>
</resources>