<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/alert_anim"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_speed="0.5"
            app:lottie_rawRes="@raw/alert"
            app:lottie_autoPlay="true" />
        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/intro_dialog_description"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:fontFamily="@font/vazir"
            android:gravity="right"
            android:padding="8dp"
            android:text="@string/intro_dialog_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_anim"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_margin="5dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:id="@+id/intro_dialog_show"
            android:fontFamily="@font/vazir"
            android:text="@string/intro_dialog_show"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/intro_dialog_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_dialog_description" />

        <com.google.android.material.button.MaterialButton
            android:layout_margin="5dp"
            android:id="@+id/intro_dialog_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/vazir"
            android:padding="8dp"
            android:text="@string/intro_dialog_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/intro_dialog_show"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_dialog_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>
